--- a/Client/src/main/resources/fxml/main.fxml
+++ b/Client/src/main/resources/fxml/main.fxml
@@ -41,12 +41,13 @@
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane>
+            <GridPane GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
@@ -74,7 +75,7 @@
                   <Insets />
                </opaqueInsets>
             </GridPane>
-            <GridPane fx:id="withdrawForm" GridPane.rowIndex="1">
+            <GridPane fx:id="withdrawForm" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
@@ -99,7 +100,7 @@
                   <Button fx:id="withdrawButton" mnemonicParsing="false" text="Wypłać" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <GridPane GridPane.rowIndex="2">
+            <GridPane GridPane.rowIndex="3">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
@@ -117,7 +118,7 @@
                   <Button fx:id="historyButton" mnemonicParsing="false" text="Historia" GridPane.rowIndex="1" />
                </children>
             </GridPane>
-            <GridPane GridPane.columnIndex="1">
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -155,7 +156,7 @@
                   <Button fx:id="internalTransferButton" mnemonicParsing="false" text="Przelew wewnętrzny" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -201,7 +202,12 @@
                   <Button fx:id="externalTransferButton" mnemonicParsing="false" text="Przelew zewnętrzny" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <ListView fx:id="accountList" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <ListView fx:id="accountList" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <FlowPane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="logoutButton" mnemonicParsing="false" text="Wyloguj" />
+               </children>
+            </FlowPane>
          </children>
       </GridPane>
     </children>
