--- a/Client/src/main/resources/fxml/main.fxml
+++ b/Client/src/main/resources/fxml/main.fxml
@@ -3,8 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
@@ -202,12 +202,12 @@
                   <Button fx:id="externalTransferButton" mnemonicParsing="false" text="Przelew zewnętrzny" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <ListView fx:id="accountList" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <FlowPane prefHeight="200.0" prefWidth="200.0">
                <children>
                   <Button fx:id="logoutButton" mnemonicParsing="false" text="Wyloguj" />
                </children>
             </FlowPane>
+            <TextArea fx:id="accountsTextArea" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
     </children>
